테스트 오류 수정  & 컨트롤러 일부 구현 - 데모 테스트 완