@@ -1,142 +1,147 @@
 package com.jarvis.sample.simpleboard.domain.article.api.discussion;
 
-import com.jarvis.sample.simpleboard.common.type.ArticleType;
 import com.jarvis.sample.simpleboard.common.type.UserRole;
-import com.jarvis.sample.simpleboard.common.vo.Popularity;
-import com.jarvis.sample.simpleboard.domain.article.ArticleValidatorBase;
 import com.jarvis.sample.simpleboard.domain.article.specs.Discussion;
+import com.jarvis.sample.simpleboard.domain.user.specs.User;
+import com.jarvis.sample.simpleboard.fixture.infra.article.parentArticle.IParentArticleEntityRepositoryFixture;
+import com.jarvis.sample.simpleboard.fixture.infra.user.user.IUserEntityRepositoryFixture;
 import com.jarvis.sample.simpleboard.infra.article.ParentArticleEntity;
-import com.jarvis.sample.simpleboard.infra.article.api.IParentArticleEntityRepository;
 import com.jarvis.sample.simpleboard.infra.user.UserEntity;
-import com.jarvis.sample.simpleboard.infra.user.api.IUserEntityRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 
 import java.util.Collections;
 import java.util.Optional;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
 
 public class DiscussionValidatorTest {
 
-    private IUserEntityRepository userEntityRepository;
-    private IParentArticleEntityRepository parentArticleEntityRepository;
+    private IUserEntityRepositoryFixture userRepositoryFixture;
+    private IParentArticleEntityRepositoryFixture articleRepositoryFixture;
     private DefaultDiscussionValidator discussionValidator;
 
     @BeforeEach
-    void setUp() {
-        userEntityRepository = mock(IUserEntityRepository.class);
-        parentArticleEntityRepository = mock(IParentArticleEntityRepository.class);
-        discussionValidator = new DefaultDiscussionValidator(userEntityRepository, parentArticleEntityRepository);
+    void setup() {
+        userRepositoryFixture = new IUserEntityRepositoryFixture();
+        articleRepositoryFixture = new IParentArticleEntityRepositoryFixture();
+        discussionValidator = new DefaultDiscussionValidator(userRepositoryFixture, articleRepositoryFixture);
     }
 
     @Test
-    void canWrite_ShouldReturnFalse_WhenUserRoleIsNull() {
-        Discussion article = Discussion.of(null, 1L, "author", "title", "content", Popularity.empty(), false);
-        User user = new User(1L, null);
-        boolean result = discussionValidator.canWrite(article, user);
-        assertFalse(result);
+    void canWrite_shouldReturnTrue_whenUserHasRolesAndArticleIsNew() {
+        UserEntity user = UserEntity.of("password", "nickname", Set.of(UserRole.USER));
+        user = userRepositoryFixture.save(user);
+        var user_ = User.of(user.getId(), user.getNickname(), user.getUserRole());
+        Discussion article = Discussion.of(null, null, "nickname", "title", "content", null, false);
+
+        assertTrue(discussionValidator.canWrite(article, user_));
     }
 
     @Test
-    void canWrite_ShouldReturnFalse_WhenArticleIdIsNotNull() {
-        Discussion article = Discussion.of(1L, 1L, "author", "title", "content", Popularity.empty(), false);
-        User user = new User(1L, Collections.singleton(UserRole.USER));
-        boolean result = discussionValidator.canWrite(article, user);
-        assertFalse(result);
+    void canWrite_shouldReturnFalse_whenUserHasNoRoles() {
+        UserEntity user = UserEntity.of("password", "nickname", Collections.emptySet());
+        user = userRepositoryFixture.save(user);
+        var user_ = User.of(user.getId(), user.getNickname(), user.getUserRole());
+        Discussion article = Discussion.of(null, null, "nickname", "title", "content", null, false);
+
+        assertFalse(discussionValidator.canWrite(article, user_));
     }
 
     @Test
-    void canWrite_ShouldReturnTrue_WhenUserRoleIsNotEmptyAndArticleIdIsNull() {
-        Discussion article = Discussion.of(null, 1L, "author", "title", "content", Popularity.empty(), false);
-        User user = new User(1L, Collections.singleton(UserRole.USER));
-        boolean result = discussionValidator.canWrite(article, user);
-        assertTrue(result);
+    void canWrite_shouldReturnFalse_whenArticleIsNotNew() {
+        UserEntity user = UserEntity.of("password", "nickname", Set.of(UserRole.USER));
+        user = userRepositoryFixture.save(user);
+        var user_ = User.of(user.getId(), user.getNickname(), user.getUserRole());
+        Discussion article = Discussion.of(1L, null, "nickname", "title", "content", null, false);
+
+        assertFalse(discussionValidator.canWrite(article, user_));
     }
 
     @Test
-    void canUpdate_ShouldReturnFalse_WhenAuthorIdDoesNotMatchUserId() {
-        Discussion article = Discussion.of(1L, 2L, "author", "title", "content", Popularity.empty(), false);
-        User user = new User(1L, Collections.singleton(UserRole.USER));
-        boolean result = discussionValidator.canUpdate(article, user);
-        assertFalse(result);
+    void canUpdate_shouldReturnTrue_whenArticleExistsAndUserExistsAndAuthorMatches() {
+        UserEntity user = UserEntity.of("password", "nickname", Set.of(UserRole.USER));
+        Long userId = 1L;
+        userRepositoryFixture.save(user);
+        user = userRepositoryFixture.save(user);
+        var user_ = User.of(user.getId(), user.getNickname(), user.getUserRole());
+
+        ParentArticleEntity articleEntity = ParentArticleEntity.of(1L, null, "title", "content", userId, null, false);
+        articleRepositoryFixture.save(articleEntity);
+
+        Discussion article = Discussion.of(articleEntity.getId(), userId, "nickname", "title", "content", null, false);
+
+        assertTrue(discussionValidator.canUpdate(article, user_));
     }
 
     @Test
-    void canUpdate_ShouldReturnFalse_WhenUserEntityOrArticleEntityDoesNotExist() {
-        Discussion article = Discussion.of(1L, 1L, "author", "title", "content", Popularity.empty(), false);
-        User user = new User(1L, Collections.singleton(UserRole.USER));
+    void canUpdate_shouldReturnFalse_whenArticleDoesNotExist() {
+        UserEntity user = UserEntity.of("password", "nickname", Set.of(UserRole.USER));
+        Long userId = 1L;
+        userRepositoryFixture.save(user);
+        var user_ = User.of(user.getId(), user.getNickname(), user.getUserRole());
 
-        when(userEntityRepository.findById(1L)).thenReturn(Optional.empty());
-        when(parentArticleEntityRepository.findById(1L)).thenReturn(Optional.empty());
+        Discussion article = Discussion.of(99L, userId, "nickname", "title", "content", null, false);
 
-        boolean result = discussionValidator.canUpdate(article, user);
-        assertFalse(result);
+        assertFalse(discussionValidator.canUpdate(article, user_));
     }
 
     @Test
-    void canUpdate_ShouldReturnTrue_WhenUserEntityAndArticleEntityExistAndAuthorIdMatchesUserId() {
-        Discussion article = Discussion.of(1L, 1L, "author", "title", "content", Popularity.empty(), false);
-        User user = new User(1L, Collections.singleton(UserRole.USER));
+    void canUpdate_shouldReturnFalse_whenUserDoesNotExist() {
+        Long userId = 1L;
+        ParentArticleEntity articleEntity = ParentArticleEntity.of(1L, null, "title", "content", userId, null, false);
+        articleRepositoryFixture.save(articleEntity);
 
-        when(userEntityRepository.findById(1L)).thenReturn(Optional.of(mock(UserEntity.class)));
-        when(parentArticleEntityRepository.findById(1L)).thenReturn(Optional.of(mock(ParentArticleEntity.class)));
+        Discussion article = Discussion.of(articleEntity.getId(), userId, "nickname", "title", "content", null, false);
+        User user = User.of(null, "nickname", Set.of(UserRole.USER));
 
-        boolean result = discussionValidator.canUpdate(article, user);
-        assertTrue(result);
+        assertFalse(discussionValidator.canUpdate(article, user));
     }
 
     @Test
-    void canDelete_ShouldReturnFalse_WhenAuthorIdDoesNotMatchUserId() {
-        Discussion article = Discussion.of(1L, 2L, "author", "title", "content", Popularity.empty(), false);
-        User user = new User(1L, Collections.singleton(UserRole.USER));
-        boolean result = discussionValidator.canDelete(article, user);
-        assertFalse(result);
+    void canDelete_shouldReturnTrue_whenArticleExistsAndUserExistsAndAuthorMatches() {
+        UserEntity user = UserEntity.of("password", "nickname", Set.of(UserRole.USER));
+        Long userId = 1L;
+        userRepositoryFixture.save(user);
+
+        ParentArticleEntity articleEntity = ParentArticleEntity.of(1L, null, "title", "content", userId, null, false);
+        articleRepositoryFixture.save(articleEntity);
+
+        Discussion article = Discussion.of(articleEntity.getId(), userId, "nickname", "title", "content", null, false);
+
+        user = userRepositoryFixture.save(user);
+        var user_ = User.of(user.getId(), user.getNickname(), user.getUserRole());
+
+        assertTrue(discussionValidator.canDelete(article, user_));
     }
 
     @Test
-    void canDelete_ShouldReturnFalse_WhenUserEntityOrArticleEntityDoesNotExist() {
-        Discussion article = Discussion.of(1L, 1L, "author", "title", "content", Popularity.empty(), false);
-        User user = new User(1L, Collections.singleton(UserRole.USER));
+    void canDelete_shouldReturnFalse_whenArticleDoesNotExist() {
+        UserEntity user = UserEntity.of("password", "nickname", Set.of(UserRole.USER));
+        Long userId = 1L;
+        userRepositoryFixture.save(user);
 
-        when(userEntityRepository.findById(1L)).thenReturn(Optional.empty());
-        when(parentArticleEntityRepository.findById(1L)).thenReturn(Optional.empty());
+        Discussion article = Discussion.of(99L, userId, "nickname", "title", "content", null, false);
 
-        boolean result = discussionValidator.canDelete(article, user);
-        assertFalse(result);
+        user = userRepositoryFixture.save(user);
+        var user_ = User.of(user.getId(), user.getNickname(), user.getUserRole());
+
+        assertFalse(discussionValidator.canDelete(article, user_));
     }
 
     @Test
-    void canDelete_ShouldReturnTrue_WhenUserEntityAndArticleEntityExistAndAuthorIdMatchesUserId() {
-        Discussion article = Discussion.of(1L, 1L, "author", "title", "content", Popularity.empty(), false);
-        User user = new User(1L, Collections.singleton(UserRole.USER));
+    void canDelete_shouldReturnFalse_whenUserDoesNotExist() {
+        Long userId = 1L;
+        ParentArticleEntity articleEntity = ParentArticleEntity.of(1L, null, "title", "content", userId, null, false);
+        articleRepositoryFixture.save(articleEntity);
 
-        when(userEntityRepository.findById(1L)).thenReturn(Optional.of(mock(UserEntity.class)));
-        when(parentArticleEntityRepository.findById(1L)).thenReturn(Optional.of(mock(ParentArticleEntity.class)));
+        Discussion article = Discussion.of(articleEntity.getId(), userId, "nickname", "title", "content", null, false);
+        UserEntity user = UserEntity.of("password", "nickname", Set.of(UserRole.USER));
 
-        boolean result = discussionValidator.canDelete(article, user);
-        assertTrue(result);
-    }
+        user = userRepositoryFixture.save(user);
+        var user_ = User.of(user.getId(), user.getNickname(), user.getUserRole());
 
-    // Assuming User class exists with methods getId() and getUserRole()
-    private static class User {
-        private final Long id;
-        private final Set<UserRole> userRoles;
-
-        public User(Long id, Set<UserRole> userRoles) {
-            this.id = id;
-            this.userRoles = userRoles;
-        }
-
-        public Long getId() {
-            return id;
-        }
-
-        public Set<UserRole> getUserRole() {
-            return userRoles;
-        }
+        assertFalse(discussionValidator.canDelete(article, user_));
     }
 }
